# Stabilium

./: .gitignore  .gitleaks.toml  COMPLETE_Agent_Stability_Engine_Founder_Package.md  Dockerfile  LICENSE  Procfile  README.md  action.yml  expansion.md  nixpacks.toml  plantable.md  pyproject.toml  requirements-deploy.txt  start.sh
.github/workflows/: ci.yml  security.yml
api/: main.py  requirements.txt  stabilium_api.db-shm  stabilium_api.db-wal
docs/: BUILD_PUBLISH_INSTALL.md  COMPLIANCE_EXPORT.md  DEMO_RUNBOOK.md  RELEASE_CHECKLIST.md  SECURITY_OPERATIONS.md  STAGE0_CONTRACT.md
examples/: run_demo_bundle.sh
examples/agent_tasks/: sample_tasks.json
examples/baselines/: horizon_proxy_suite.baseline.json  large_suite.baseline.json  reasoning_suite.baseline.json  safety_suite.baseline.json  tooling_suite.baseline.json
examples/benchmarks/: conversation_suite.json  default_suite.json  horizon_proxy_suite.json  large_suite.json  reasoning_suite.json  safety_suite.json  tooling_suite.json
scripts/: validate_models.py
src/agent_stability_engine/: __init__.py  cli.py  contracts.py  security.py
src/agent_stability_engine/adapters/: __init__.py  anthropic.py  custom_endpoint.py  openai.py
src/agent_stability_engine/arbitration/: __init__.py  arbitrator.py  disagreement.py
src/agent_stability_engine/engine/: __init__.py  alignment.py  asi.py  contradiction.py  (+11 more)
tests/: test_agent_benchmark_runner.py  test_alignment.py  test_anthropic_adapter.py  test_arbitrator.py  test_asi.py  test_attestation.py  test_benchmark_runner.py  test_cli.py  test_contracts.py  test_contradiction.py  test_conversation.py  test_conversation_benchmark_runner.py  test_custom_endpoint_adapter.py  test_disagreement.py  test_drift.py  test_evaluator.py  test_export_bundle.py  test_horizon_runner.py  test_manifest.py  test_mutations.py  test_openai_adapter.py  test_package.py  test_pdf_renderer.py  test_regression_runner.py  test_sampling.py  test_sandbox.py  test_schema.py  test_security.py  test_self_healing.py  test_stats.py  test_taxonomy.py  test_trace_collector.py  test_trajectory.py  test_variance.py
(+20 files in other folders)
