[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-stability-engine"
version = "0.1.0"
description = "Agent Stability Engine: reproducible stability testing primitives for autonomous agents."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ruthwik Dovala" }]
keywords = [
  "agent",
  "stability",
  "llm",
  "testing",
  "benchmark",
  "evaluation",
  "autonomous-agents",
  "regression",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.26",
  "jsonschema>=4.22",
]

[project.urls]
Homepage = "https://github.com/ruth411/Stabilium"
Source = "https://github.com/ruth411/Stabilium"
"Bug Tracker" = "https://github.com/ruth411/Stabilium/issues"

[project.scripts]
ase = "agent_stability_engine.cli:main"

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.5",
  "types-jsonschema>=4.26.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_configs = true
mypy_path = "src"
packages = ["agent_stability_engine"]
